<resources>
    <string name="app_name">Точки пополнения</string>
    <string name="title_activity_map">Map</string>
    <string name="address_label">Адрес:</string>
    <string name="work_hours_label">Часы работы:</string>
    <string name="map">Карта</string>
    <string name="points">Точки</string>
    <string name="description">Описание</string>
    <string name="deposition_time">Время пополнения</string>
    <string name="deposition_point_type">Тип точки пополнения</string>
    <string name="restrictions">Ограничения</string>
    <string name="meters">метров</string>
    <string name="km">км</string>
    <string name="go_to_web_site">Перейти на веб-сайт</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="amount">всего</string>
    <string name="no_internet">Отсутствует интернет-соединение</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="show_on_map">Показать на карте</string>
</resources>
